@@ -242,10 +242,11 @@ test("minlength", function() {
 	var v = jQuery("#form").validate(),
 		method = $.validator.methods.minlength,
 		param = 2,
-		e = $('#text1, #text2, #text3');
+		e = $('#text1, #text1c, #text2, #text3');
 	ok( method.call( v, e[0].value, e[0], param), "Valid text input" );
 	ok(!method.call( v, e[1].value, e[1], param), "Invalid text input" );
-	ok( method.call( v, e[2].value, e[2], param), "Valid text input" );
+	ok(!method.call( v, e[2].value, e[2], param), "Invalid text input" );
+	ok( method.call( v, e[3].value, e[3], param), "Valid text input" );
 	
 	e = $('#check1, #check2, #check3');
 	ok(!method.call( v, e[0].value, e[0], param), "Valid checkbox" );
